--- a/microcode.yaml
+++ b/microcode.yaml
@@ -14,6 +14,7 @@ control_lines:
   II: 0x00000028
   SHI: 0x00000030
   SLI: 0x00000038
+
   PCE: 0x00000040
   FSEL: 0x00000080 # ALU = LOW, BUS = HIGH
   SPE: 0x00000100
@@ -3003,7 +3004,7 @@ instructions:
   # ALU
   # Carry LOW = result + 1
   
-  # carry clear
+  # carry cleared
   ADD_B:
     # HLLH L
     value: 0xC0
@@ -3027,7 +3028,7 @@ instructions:
           - ALU3
           - EO
           - AI
-          - FI # Broken
+          - FI 
       6:
         lines:
           - SCR
@@ -3053,7 +3054,7 @@ instructions:
           - ALU3
           - EO
           - AI
-          - FI # Broken
+          - FI 
       6:
         lines:
           - SCR
@@ -3088,7 +3089,7 @@ instructions:
           - ALU3
           - EO
           - AI
-          - FI # Broken
+          - FI 
       8:
         lines:
           - SCR
@@ -3144,7 +3145,7 @@ instructions:
           - ALU3
           - EO
           - AI
-          - FI # Broken
+          - FI 
       13:
         lines:
           - SCR
@@ -3164,7 +3165,7 @@ instructions:
           - ALU3
           - EO
           - AI
-          - FI # Broken
+          - FI 
       5:
         lines:
           - SCR
@@ -3181,7 +3182,7 @@ instructions:
           - ALU3
           - EO
           - AI
-          - FI # Broken
+          - FI 
       5:
         lines:
           - SCR
@@ -3207,7 +3208,7 @@ instructions:
           - ALU3
           - EO
           - AI
-          - FI # Broken
+          - FI 
       7:
         lines:
           - SCR
@@ -3254,7 +3255,7 @@ instructions:
           - ALU3
           - EO
           - AI
-          - FI # Broken
+          - FI 
       12:
         lines:
           - SCR
@@ -3283,7 +3284,7 @@ instructions:
           - ALU2
           - EO
           - AI
-          - FI # Broken
+          - FI 
       6:
         lines:
           - SCR
@@ -3309,7 +3310,7 @@ instructions:
           - ALU2
           - EO
           - AI
-          - FI # Broken
+          - FI 
       6:
         lines:
           - SCR
@@ -3344,7 +3345,7 @@ instructions:
           - ALU2
           - EO
           - AI
-          - FI # Broken
+          - FI 
       8:
         lines:
           - SCR
@@ -3400,7 +3401,7 @@ instructions:
           - ALU2
           - EO
           - AI
-          - FI # Broken
+          - FI 
       13:
         lines:
           - SCR
@@ -3420,7 +3421,7 @@ instructions:
           - ALU2
           - EO
           - AI
-          - FI # Broken
+          - FI 
       5:
         lines:
           - SCR
@@ -3437,7 +3438,7 @@ instructions:
           - ALU2
           - EO
           - AI
-          - FI # Broken
+          - FI 
       5:
         lines:
           - SCR
@@ -3463,7 +3464,7 @@ instructions:
           - ALU2
           - EO
           - AI
-          - FI # Broken
+          - FI 
       7:
         lines:
           - SCR
@@ -3510,7 +3511,7 @@ instructions:
           - ALU2
           - EO
           - AI
-          - FI # Broken
+          - FI 
       12:
         lines:
           - SCR
@@ -3532,7 +3533,7 @@ instructions:
           - ALUM
           - EO
           - AI
-          - FI # Broken
+          - FI 
       5:
         lines:
           - SCR
@@ -3551,7 +3552,7 @@ instructions:
           - ALUM
           - EO
           - AI
-          - FI # Broken
+          - FI 
       5:
         lines:
           - SCR
@@ -3579,7 +3580,7 @@ instructions:
           - ALUM
           - EO
           - AI
-          - FI # Broken
+          - FI 
       7:
         lines:
           - SCR
@@ -3628,7 +3629,7 @@ instructions:
           - ALUM
           - EO
           - AI
-          - FI # Broken
+          - FI 
       12:
         lines:
           - SCR
@@ -3649,7 +3650,7 @@ instructions:
           - ALUM
           - EO
           - AI
-          - FI # Broken
+          - FI 
       5:
         lines:
           - SCR
@@ -3668,7 +3669,7 @@ instructions:
           - ALUM
           - EO
           - AI
-          - FI # Broken
+          - FI 
       5:
         lines:
           - SCR
@@ -3696,7 +3697,7 @@ instructions:
           - ALUM
           - EO
           - AI
-          - FI # Broken
+          - FI 
       7:
         lines:
           - SCR
@@ -3745,7 +3746,7 @@ instructions:
           - ALUM
           - EO
           - AI
-          - FI # Broken
+          - FI 
       12:
         lines:
           - SCR
@@ -3765,7 +3766,7 @@ instructions:
           - ALUM
           - EO
           - AI
-          - FI # Broken
+          - FI 
       5:
         lines:
           - SCR
@@ -3783,7 +3784,7 @@ instructions:
           - ALUM
           - EO
           - AI
-          - FI # Broken
+          - FI 
       5:
         lines:
           - SCR
@@ -3810,7 +3811,7 @@ instructions:
           - ALUM
           - EO
           - AI
-          - FI # Broken
+          - FI 
       7:
         lines:
           - SCR
@@ -3858,7 +3859,7 @@ instructions:
           - ALUM
           - EO
           - AI
-          - FI # Broken
+          - FI 
       12:
         lines:
           - SCR
@@ -4011,7 +4012,7 @@ instructions:
         lines:
           - SCR
 
-  # Carry clear
+  # Carry cleared
   DEC_A:
     value: 0xE0
     steps:
@@ -4031,7 +4032,7 @@ instructions:
           - ALU1
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
       5:
@@ -4064,7 +4065,7 @@ instructions:
           - ALU1
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - BI
       7:
@@ -4101,7 +4102,7 @@ instructions:
           - ALU1
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - CI
       7:
@@ -4332,7 +4333,7 @@ instructions:
         lines:
           - SCR
   
-  # Carry clear
+  # Carry cleared
   SHL:
     value: 0xE9
     steps:
@@ -4350,7 +4351,7 @@ instructions:
           # HHLL L A plus A
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
       5:
@@ -4373,7 +4374,7 @@ instructions:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
       5:
@@ -4381,7 +4382,7 @@ instructions:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
       6:
@@ -4389,7 +4390,7 @@ instructions:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
       7:
@@ -4397,7 +4398,7 @@ instructions:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
       8:
@@ -4405,7 +4406,7 @@ instructions:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
       9:
@@ -4413,7 +4414,7 @@ instructions:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
       10:
@@ -4421,7 +4422,7 @@ instructions:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
       11:
@@ -4429,7 +4430,7 @@ instructions:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
       12:
@@ -4452,7 +4453,7 @@ instructions:
           # HHLL L A plus A
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
       5:
@@ -4460,17 +4461,108 @@ instructions:
           # LLLL L A plus carry
           - EO
           - AI
-          - FI # Broken
+          - FI 
       6:
         lines:
           - SCR
-  # NOT IMPLEMENTED
+  # Carry set
   ROR:
     value: 0xEC
     steps:
       3:
         lines:
+          # set PSW as 0001
+          - ALU0
+          - ALU1
+          - ALUM
+          - FI
+      4:
+        lines:
+          - FO
+          - TI
+      5:
+        lines:
+          # set carry
+          # HHLL H logical 1 - bus not inverted
+          - ALU2
+          - ALU3
+          - ALUM
+          - EO
+          - FI
+          - FSEL
+      6:
+        lines:
+          # A or #B plus 1
+          - ALU1
+          - FI
+      7:
+        lines:
+          # HHLL L A plus A + Carry
+          - ALU2
+          - ALU3
+          - FI 
+          - EO
+          - AI
+      8:
+        lines:
+          # HHLL L A plus A + Carry
+          - ALU2
+          - ALU3
+          - FI 
+          - EO
+          - AI
+      9:
+        lines:
+          # HHLL L A plus A + Carry
+          - ALU2
+          - ALU3
+          - FI 
+          - EO
+          - AI
+      10:
+        lines:
+          # HHLL L A plus A + Carry
+          - ALU2
+          - ALU3
+          - FI 
+          - EO
+          - AI
+      11:
+        lines:
+          # HHLL L A plus A + Carry
+          - ALU2
+          - ALU3
+          - FI 
+          - EO
+          - AI
+      12:
+        lines:
+          # HHLL L A plus A + Carry
+          - ALU2
+          - ALU3
+          - FI 
+          - EO
+          - AI
+      13:
+        lines:
+          # HHLL L A plus A + Carry
+          - ALU2
+          - ALU3
+          - FI 
+          - EO
+          - AI
+      14:
+        lines:
+          # HHLL L A plus A + Carry
+          - ALU2
+          - ALU3
+          - FI 
+          - EO
+          - AI
+      15:
+        lines:
           - SCR
+
   # Carry defines what is rotated to bottom - Manually clear carry 1st time
   RCL:
     value: 0xED
@@ -4480,7 +4572,7 @@ instructions:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
   RCR:
@@ -4491,63 +4583,63 @@ instructions:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
-      3:
+      4:
         lines:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
-      3:
+      5:
         lines:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
-      3:
+      6:
         lines:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
-      3:
+      7:
         lines:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
-      3:
+      8:
         lines:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
-      3:
+      9:
         lines:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
-      3:
+      10:
         lines:
           # HHLL L A plus A + Carry
           - ALU2
           - ALU3
-          - FI # Broken
+          - FI 
           - EO
           - AI
    
@@ -4625,7 +4717,7 @@ instructions:
         lines:
           - SCR
 
-  # Carry LOW 
+  # SET Carry (LOW) 
   STC:
     value: 0xF1
     steps:
@@ -4641,7 +4733,7 @@ instructions:
       4:
         lines:
           - SCR
-  # Carry HIGH
+  # Clear Carry (HIGH)
   CLC:
     value: 0xF2
     steps:
