--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,9 +30,10 @@ twitter_username:
 github_username:
 
 # Build settings
-theme: minima
+remote_theme: "mmistakes/minimal-mistakes"
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
