--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,9 +1,11 @@
 # main links
-main:
+docs:
   - title: "Quick-Start Guide"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+  - title: "About"
+    url: https://mmistakes.github.io/minimal-mistakes/about/
+  - title: "Doc Test"
+    url: /docs/test/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
