--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,7 +11,7 @@
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
 # theme                  : "minimal-mistakes-jekyll"
-remote_theme: "mmistakes/minimal-mistakes"
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
@@ -22,11 +22,12 @@ subtitle: # site tagline that appears below site title in masthead
 name: "Deven Marrero"
 description: "8 bit breadboard computer"
 url: https://devenmarrero.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl: # the subpath of your site, e.g. "/blog"
+baseurl: /8-Bit_CPU # the subpath of your site, e.g. "/blog"
 repository: devenmarrero/8-Bit_CPU # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title: # overrides the website title displayed in the masthead, use " " for no title
+
 # breadcrumbs            : false # true, false (default)
 words_per_minute: 200
 comments:
@@ -101,7 +102,7 @@ analytics:
 
 # Site Author
 author:
-  name: "Your Name"
+  name: "Deven Marrero"
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio: "I am an **amazing** person."
   location: "Somewhere"
