--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ subtitle: # site tagline that appears below site title in masthead
 name: "Deven Marrero"
 description: "8 bit breadboard computer"
 url: https://devenmarrero.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl: /8-Bit_CPU # the subpath of your site, e.g. "/blog"
+#baseurl: /8-Bit_CPU # the subpath of your site, e.g. "/blog"
 repository: devenmarrero/8-Bit_CPU # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
