Added more test files

--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -4,3 +4,8 @@ docs:
     children:
       - title: "Home"
         url: /
+
+  - title: "Build"
+    children:
+      - title: "clock"
+        url: /docs/clock/
